feat: center logic 구현, getNNextPosition 메서드 완성